# stokes

Stokes/: CMakeLists.txt
Stokes/Client/: CMakeLists.txt
Stokes/Client/MtoS/: CMakeLists.txt  MtoS.cpp
Stokes/Core/: API.cpp  API.hpp  Array.cpp  Array.hpp  Bound.cpp  Bound.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  DataType.cpp  DataType.hpp  DenseMappedField.cpp  DenseMappedField.hpp  Document.cpp  Document.hpp  Emitter.cpp  Emitter.hpp  Exception.cpp  Exception.hpp  Field.cpp  Field.hpp  FieldCache.cpp  FieldCache.hpp  File.cpp  File.hpp  FileMapping.cpp  FileMapping.hpp  LinearArray.cpp  LinearArray.hpp  LinearSampler.cpp  LinearSampler.hpp  MappedArray.cpp  MappedArray.hpp  MappedField.cpp  MappedField.hpp  Matrix.cpp  Matrix.hpp  NoisedEmitter.cpp  NoisedEmitter.hpp  Noiser.cpp  (+11 more)
Stokes/Core/UnitTests/: CMakeLists.txt  UnitTestDataType.hpp  UnitTestDenseMappedField.hpp  UnitTestField.hpp  UnitTestLinearArray.hpp  UnitTestMappedArray.hpp  UnitTestMatrix.hpp  UnitTestNoiser.hpp  UnitTestSimpleField.hpp  UnitTestSparseMappedField.hpp
Stokes/Maya/: API.cpp  API.hpp  CMakeLists.txt  MayaNurbsSurfaceEmitter.cpp  MayaNurbsSurfaceEmitter.hpp  MayaObjectEmitter.cpp  MayaObjectEmitter.hpp  NurbsCurveEmitter.cpp  NurbsCurveEmitter.hpp  NurbsSurfaceEmitter.cpp  NurbsSurfaceEmitter.hpp  ObjectEmitter.cpp  ObjectEmitter.hpp
src/: API.hpp  Array.cpp  Array.hpp  Bound.hpp  DataType.cpp  DataType.hpp  Document.hpp  Exception.cpp  Exception.hpp  Field.hpp  LinearArray.cpp  LinearArray.hpp  MappedArray.cpp  MappedArray.hpp  Matrix.cpp  Matrix.hpp  Stokes.hpp  Vector.cpp  Vector.hpp
